# itmo-optimization-methods-course

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
benchmarks/cpp/: CoreBench.cpp
docs/: api-reference.md  architecture.md  autograd.md  benchmarks.md  build-system.md  datasets.md  differentiation.md  functions.md  getting-started.md  index.md  linalg.md  neural-network.md  optimizers.md
notebooks/: _build_first_lab.py  _build_fourth_lab.py  _build_second_lab.py  _build_third_lab.py  first_lab.ipynb  fourth_lab.ipynb  second_lab.ipynb  third_lab.ipynb
python/optlib/: __init__.py  benchmarks.py  datasets.py  experiments.py  functions.py  nn.py  plotting.py  studies.py
scripts/: download_dataset.py
src/optlib/bindings/: Module.cpp
src/optlib/core/: Differentiation.cpp  Differentiation.hpp  Dual.hpp  LinAlg.hpp  OptimizeResult.hpp  StopCriteria.hpp  Version.hpp
src/optlib/core/functions/: BenchmarkFunctions.cpp  BenchmarkFunctions.hpp  Rosenbrock.cpp  Rosenbrock.hpp
src/optlib/core/nn/: NeuralNetwork.cpp  NeuralNetwork.hpp
src/optlib/core/optimizers/: FirstOrder.cpp  FirstOrder.hpp  LineSearch.cpp  LineSearch.hpp  SecondOrder.cpp  SecondOrder.hpp  ZeroOrder.cpp  ZeroOrder.hpp
src/optlib/core/schedulers/: LearningRate.cpp  LearningRate.hpp
tests/cpp/: TestBenchmarkFunctions.cpp  TestCoreMath.cpp  TestFirstOrder.cpp  TestLineSearch.cpp  TestNeuralNetwork.cpp  TestSchedulers.cpp  TestSecondOrder.cpp  TestSmoke.cpp  TestZeroOrder.cpp
tests/python/: test_advanced_optimizers.py  test_core_math.py  test_datasets.py  test_first_order.py  test_functions.py  test_import.py  test_neural_network.py  test_optimizers.py  test_schedulers.py  test_scipy_reference.py  test_second_order.py  test_studies.py  test_zero_order.py
